grammar/filterParser.py
# Generated from grammar/filter.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class filterParser ( Parser ):

    grammarFileName = "filter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'mana value'", "'power'", 
                     "'toughness'", "'text'", "'type'", "'='", "'<'", "'>'", 
                     "'contains'", "'not contains'", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "AND", "OR", "INT", "STRING", "WS" ]

    RULE_filter = 0
    RULE_condition = 1
    RULE_conjunctiveCondition = 2
    RULE_manaCondition = 3
    RULE_powerCondition = 4
    RULE_toughnessCondition = 5
    RULE_textCondition = 6
    RULE_typeCondition = 7
    RULE_comparisonOperator = 8
    RULE_textOperator = 9
    RULE_logicalOperator = 10

    ruleNames =  [ "filter", "condition", "conjunctiveCondition", "manaCondition", 
                   "powerCondition", "toughnessCondition", "textCondition", 
                   "typeCondition", "comparisonOperator", "textOperator", 
                   "logicalOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    AND=13
    OR=14
    INT=15
    STRING=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(filterParser.ConditionContext,0)


        def EOF(self):
            return self.getToken(filterParser.EOF, 0)

        def getRuleIndex(self):
            return filterParser.RULE_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter" ):
                listener.enterFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter" ):
                listener.exitFilter(self)




    def filter_(self):

        localctx = filterParser.FilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.condition()
            self.state = 23
            self.match(filterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manaCondition(self):
            return self.getTypedRuleContext(filterParser.ManaConditionContext,0)


        def textCondition(self):
            return self.getTypedRuleContext(filterParser.TextConditionContext,0)


        def toughnessCondition(self):
            return self.getTypedRuleContext(filterParser.ToughnessConditionContext,0)


        def powerCondition(self):
            return self.getTypedRuleContext(filterParser.PowerConditionContext,0)


        def typeCondition(self):
            return self.getTypedRuleContext(filterParser.TypeConditionContext,0)


        def conjunctiveCondition(self):
            return self.getTypedRuleContext(filterParser.ConjunctiveConditionContext,0)


        def getRuleIndex(self):
            return filterParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = filterParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_condition)
        try:
            self.state = 31
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.manaCondition()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.textCondition()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.toughnessCondition()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.powerCondition()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 29
                self.typeCondition()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 6)
                self.state = 30
                self.conjunctiveCondition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConjunctiveConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(filterParser.ConditionContext)
            else:
                return self.getTypedRuleContext(filterParser.ConditionContext,i)


        def logicalOperator(self):
            return self.getTypedRuleContext(filterParser.LogicalOperatorContext,0)


        def getRuleIndex(self):
            return filterParser.RULE_conjunctiveCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunctiveCondition" ):
                listener.enterConjunctiveCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunctiveCondition" ):
                listener.exitConjunctiveCondition(self)




    def conjunctiveCondition(self):

        localctx = filterParser.ConjunctiveConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conjunctiveCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.match(filterParser.T__0)
            self.state = 34
            self.condition()
            self.state = 35
            self.logicalOperator()
            self.state = 36
            self.condition()
            self.state = 37
            self.match(filterParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManaConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparisonOperator(self):
            return self.getTypedRuleContext(filterParser.ComparisonOperatorContext,0)


        def INT(self):
            return self.getToken(filterParser.INT, 0)

        def getRuleIndex(self):
            return filterParser.RULE_manaCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterManaCondition" ):
                listener.enterManaCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitManaCondition" ):
                listener.exitManaCondition(self)




    def manaCondition(self):

        localctx = filterParser.ManaConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_manaCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(filterParser.T__2)
            self.state = 40
            self.comparisonOperator()
            self.state = 41
            self.match(filterParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PowerConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparisonOperator(self):
            return self.getTypedRuleContext(filterParser.ComparisonOperatorContext,0)


        def INT(self):
            return self.getToken(filterParser.INT, 0)

        def getRuleIndex(self):
            return filterParser.RULE_powerCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowerCondition" ):
                listener.enterPowerCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowerCondition" ):
                listener.exitPowerCondition(self)




    def powerCondition(self):

        localctx = filterParser.PowerConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_powerCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(filterParser.T__3)
            self.state = 44
            self.comparisonOperator()
            self.state = 45
            self.match(filterParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToughnessConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparisonOperator(self):
            return self.getTypedRuleContext(filterParser.ComparisonOperatorContext,0)


        def INT(self):
            return self.getToken(filterParser.INT, 0)

        def getRuleIndex(self):
            return filterParser.RULE_toughnessCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToughnessCondition" ):
                listener.enterToughnessCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToughnessCondition" ):
                listener.exitToughnessCondition(self)




    def toughnessCondition(self):

        localctx = filterParser.ToughnessConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_toughnessCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(filterParser.T__4)
            self.state = 48
            self.comparisonOperator()
            self.state = 49
            self.match(filterParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def textOperator(self):
            return self.getTypedRuleContext(filterParser.TextOperatorContext,0)


        def STRING(self):
            return self.getToken(filterParser.STRING, 0)

        def getRuleIndex(self):
            return filterParser.RULE_textCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextCondition" ):
                listener.enterTextCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextCondition" ):
                listener.exitTextCondition(self)




    def textCondition(self):

        localctx = filterParser.TextConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_textCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(filterParser.T__5)
            self.state = 52
            self.textOperator()
            self.state = 53
            self.match(filterParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def textOperator(self):
            return self.getTypedRuleContext(filterParser.TextOperatorContext,0)


        def STRING(self):
            return self.getToken(filterParser.STRING, 0)

        def getRuleIndex(self):
            return filterParser.RULE_typeCondition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeCondition" ):
                listener.enterTypeCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeCondition" ):
                listener.exitTypeCondition(self)




    def typeCondition(self):

        localctx = filterParser.TypeConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(filterParser.T__6)
            self.state = 56
            self.textOperator()
            self.state = 57
            self.match(filterParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return filterParser.RULE_comparisonOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonOperator" ):
                listener.enterComparisonOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonOperator" ):
                listener.exitComparisonOperator(self)




    def comparisonOperator(self):

        localctx = filterParser.ComparisonOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparisonOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1792) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return filterParser.RULE_textOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextOperator" ):
                listener.enterTextOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextOperator" ):
                listener.exitTextOperator(self)




    def textOperator(self):

        localctx = filterParser.TextOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_textOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(filterParser.AND, 0)

        def OR(self):
            return self.getToken(filterParser.OR, 0)

        def getRuleIndex(self):
            return filterParser.RULE_logicalOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOperator" ):
                listener.enterLogicalOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOperator" ):
                listener.exitLogicalOperator(self)




    def logicalOperator(self):

        localctx = filterParser.LogicalOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_logicalOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not(_la==13 or _la==14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





